# ultimate-to-do

./: .gitignore  Cargo.toml  Justfile  README.md
ui/: app-window.slint
utd-lib-python/: Cargo.toml  pyproject.toml
utd-lib-python/src/: lib.rs
utd_android/: Cargo.toml  README.md
utd_android/src/: lib.rs
utd_cli/: Cargo.toml  README.md
utd_cli/src/: main.rs  main2.rs  utils.rs
utd_lib/: Cargo.toml  README.md
utd_pc/: Cargo.toml  README.md  build.rs
utd_server/: Cargo.toml  README.md
utd_server/src/: main.rs
utd_web/: Cargo.toml  README.md  index.html
utd_web/src/: lib.rs
